--- a/calculator/style.css
+++ b/calculator/style.css
@@ -52,7 +52,7 @@ main,
 }
 
 .main-flex {
-    padding: 1rem;
+    padding: 0.7rem 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -67,12 +67,13 @@ main,
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    grid-gap: 0.2rem;
+    grid-gap: 0.4rem;
     min-height: 25vh;
     max-width: 30vw;
     font-size: 1.5rem;
     font-weight: 400;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 0.4rem;
 }
 
 .button-grid div {
@@ -92,10 +93,27 @@ main,
 }
 
 #screen {
-    min-height: 20vh;
+    min-height: 25vh;
     border: 2px solid gray;
     width: 100%;
     border-radius: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    color: rgba(255, 255, 255, 0.904);
+    text-align: right;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+#screen-main {
+    padding-right: 1rem;
+    font-size: 2rem;
+}
+
+#screen-preview {
+    padding-right: 0.5rem;
+    font-size: 1.3rem;
+    opacity: 0.4;
 }
 
 #clear {
